<resources>
    <string name="app_name">Food App</string>
    <string name="menu_recipes_fragment">Recipes</string>
    <string name="menu_favorite_recipes_fragment">Favorites</string>
    <string name="menu_food_joke_fragment">Food Joke</string>
    <string name="lorem_ipsum_average">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="lorem_ipsum_lengthy">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</string>
    <string name="str_vegan">Vegan</string>
    <string name="str_error_no_internet_connection">No internet connection</string>
    <string name="str_internet_restored">Internet connection restored</string>
    <string name="str_error_timeout">Timeout</string>
    <string name="str_error_api_limit_reached">Api key reached limits</string>
    <string name="str_error_recipes_not_found">Recipes not found</string>
    <string name="scr_recipes_bottom_sheet_txt_view_meal_type">Meal Type</string>
    <string name="scr_recipes_bottom_sheet_chip_main_course">Main Course</string>
    <string name="scr_recipes_bottom_sheet_chip_side_dish">Side Dish</string>
    <string name="scr_recipes_bottom_sheet_chip_dessert">Dessert</string>
    <string name="scr_recipes_bottom_sheet_chip_appetizer">Appetizer</string>
    <string name="scr_recipes_bottom_sheet_chip_salad">Salad</string>
    <string name="scr_recipes_bottom_sheet_chip_soup">Soup</string>
    <string name="scr_recipes_bottom_sheet_chip_finger">Finger Food</string>
    <string name="scr_recipes_bottom_sheet_txt_view_diet_type">Diet Type</string>
    <string name="scr_recipes_bottom_sheet_chip_gluten_free">Gluten Free</string>
    <string name="scr_recipes_bottom_sheet_chip_ketogenic">Ketogenic</string>
    <string name="scr_recipes_bottom_sheet_chip_vegetarian">Vegetarian</string>
    <string name="scr_recipes_bottom_sheet_chip_vegan">Vegan</string>
    <string name="scr_recipes_bottom_sheet_chip_paleo">Paleo</string>
    <string name="scr_overview_text_view_vegetarian">Vegetarian</string>
    <string name="scr_overview_text_view_vegan">Vegan</string>
    <string name="scr_overview_text_view_gluten_free">Gluten Free</string>
    <string name="scr_overview_text_view_dairy_free">Dairy Free</string>
    <string name="scr_overview_text_view_healthy">Healthy</string>
    <string name="scr_overview_text_view_cheap">Cheap</string>
    <string name="str_apply">Apply</string>
    <string name="menu_search_search">Search</string>
    <string name="str_details_activity">Details</string>
    <string name="str_details">Details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_overview">Overview</string>
    <string name="str_ingredients">Ingredients</string>
    <string name="str_instructions">Instructions</string>
    <string name="scr_details_activity_save_to_favorites_menu">Save to favorites</string>
    <string name="scr_details_tst_recipe_saved_to_favorites">Recipe added to favorites</string>
    <string name="scr_details_tst_recipe_removed_from_favorites">Recipe removed from favorites</string>
    <string name="scr_details_tst_recipes_removed_from_favorites">Recipes removed from favorites</string>
    <string name="src_favorites_text_view_no_favorites">No favorite recipes</string>
    <string name="scr_favorites_delete_favorite_menu">Delete Favorite</string>
    <string name="scr_favorites_delete_all_menu">Delete All</string>
    <string name="scr_favorites_all_favorites_deleted">All favorites deleted</string>
    <string name="scr_food_joke_share_menu">Share</string>
    <string name="str_no_joke">No joke</string>
    <!--    <string name="scr_favorites_items_selected_menu_title">Favorites selected: %1$d</string>-->

    <plurals name="scr_favorites_items_selected_menu_title">
        <item quantity="one">%d favorite selected</item>
        <item quantity="other">%d favorites selected</item>
    </plurals>
</resources>