<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSurface"
    android:paddingHorizontal="16dp"
    android:paddingTop="24dp"
    android:paddingBottom="8dp"
    android:theme="@style/Theme.FoodApp.Main"
    tools:context=".ui.fragments.recipes.RecipesBottomSheet">

<!--    android:textColor="@color/titleTextColor"-->
    <TextView
        android:id="@+id/meal_type_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:text="@string/scr_recipes_bottom_sheet_txt_view_meal_type"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/meal_type_scroll_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meal_type_text_view">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

<!--            android:theme="@style/Widget.FoodApp.ChipGroup"-->
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/meal_type_chip_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:checkedChip="@id/main_course_chip"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/main_course_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scr_recipes_bottom_sheet_chip_main_course" />

                <com.google.android.material.chip.Chip

                    android:id="@+id/side_dish_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scr_recipes_bottom_sheet_chip_side_dish" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/dessert_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scr_recipes_bottom_sheet_chip_dessert" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/appetizer_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scr_recipes_bottom_sheet_chip_appetizer" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/salad_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scr_recipes_bottom_sheet_chip_salad" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/soup_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scr_recipes_bottom_sheet_chip_soup" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/finger_food_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scr_recipes_bottom_sheet_chip_finger" />

            </com.google.android.material.chip.ChipGroup>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </HorizontalScrollView>

<!--    android:textColor="@color/titleTextColor"-->
    <TextView
        android:id="@+id/diet_type_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/scr_recipes_bottom_sheet_txt_view_diet_type"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meal_type_scroll_view" />

    <HorizontalScrollView
        android:id="@+id/diet_type_scroll_view"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/diet_type_text_view">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

<!--            android:theme="@style/Widget.FoodApp.ChipGroup"-->
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/diet_type_chip_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                app:checkedChip="@id/vegetarian_chip"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/gluten_free_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scr_recipes_bottom_sheet_chip_gluten_free" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/ketogenic_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scr_recipes_bottom_sheet_chip_ketogenic" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/vegetarian_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scr_recipes_bottom_sheet_chip_vegetarian" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/vegan_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scr_recipes_bottom_sheet_chip_vegan" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/paleo_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scr_recipes_bottom_sheet_chip_paleo" />

            </com.google.android.material.chip.ChipGroup>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </HorizontalScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/apply_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="24dp"
        android:text="@string/str_apply"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diet_type_scroll_view" />

</androidx.constraintlayout.widget.ConstraintLayout>