<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_nav"
    app:startDestination="@id/recipesFragment">

    <fragment
        android:id="@+id/recipesFragment"
        android:name="com.kosyakoff.foodapp.ui.fragments.recipes.RecipesFragment"
        android:label="@string/menu_recipes_fragment"
        tools:layout="@layout/fragment_recipes">
        <action
            android:id="@+id/action_recipesFragment_to_recipesBottomSheet"
            app:destination="@id/recipesBottomSheet" />
        <argument
            android:name="backFromBottomSheet"
            app:argType="boolean"
            android:defaultValue="false" />
        <action
            android:id="@+id/action_recipesFragment_to_detailsActivity"
            app:destination="@id/detailsActivity" />
    </fragment>
    <fragment
        android:id="@+id/favouriteRecipesFragment"
        android:name="com.kosyakoff.foodapp.ui.fragments.favorites.FavouriteRecipesFragment"
        android:label="@string/menu_favorite_recipes_fragment"
        tools:layout="@layout/fragment_favourite_recipes" />
    <fragment
        android:id="@+id/foodJokeFragment"
        android:name="com.kosyakoff.foodapp.ui.fragments.foodjoke.FoodJokeFragment"
        android:label="@string/menu_food_joke_fragment"
        tools:layout="@layout/fragment_food_joke" />
    <dialog
        android:id="@+id/recipesBottomSheet"
        android:name="com.kosyakoff.foodapp.ui.fragments.recipes.RecipesBottomSheet"
        android:label="fragment_recipes_bottom_sheet"
        tools:layout="@layout/fragment_recipes_bottom_sheet">
        <action
            android:id="@+id/action_recipesBottomSheet_to_recipesFragment"
            app:destination="@id/recipesFragment" />
    </dialog>
    <activity
        android:id="@+id/detailsActivity"
        android:name="com.kosyakoff.foodapp.ui.DetailsActivity"
        android:label="@string/str_details"
        tools:layout="@layout/activity_details" >
        <argument
            android:name="recipe"
            app:argType="com.kosyakoff.foodapp.models.FoodRecipe" />
    </activity>
</navigation>