<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/snowWhite"
    app:layoutDescription="@xml/fragment_overview_scene"
    tools:context=".ui.fragments.overview.OverviewFragment">

    <ImageView
        android:id="@+id/main_image_view"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"
        tools:src="@tools:sample/avatars" />

    <View
        android:id="@+id/gradient_view"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/gradient_overlay"
        app:layout_constraintBottom_toBottomOf="@id/main_image_view"
        app:layout_constraintEnd_toEndOf="@id/main_image_view"
        app:layout_constraintStart_toStartOf="@id/main_image_view" />

    <TextView
        android:id="@+id/time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/main_image_view"
        app:layout_constraintEnd_toEndOf="@+id/main_image_view"
        tools:text="15" />

    <ImageView
        android:id="@+id/clock_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_clock"
        app:layout_constraintBottom_toTopOf="@id/time_text_view"
        app:layout_constraintEnd_toEndOf="@id/time_text_view"
        app:layout_constraintStart_toStartOf="@+id/time_text_view"
        app:tint="@color/white"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/number_of_likes_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/time_text_view"
        app:layout_constraintEnd_toStartOf="@id/time_text_view"
        app:layout_constraintTop_toTopOf="@id/time_text_view"
        tools:text="100" />

    <ImageView
        android:id="@+id/likes_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_heart"
        app:layout_constraintBottom_toTopOf="@id/number_of_likes_text_view"
        app:layout_constraintEnd_toEndOf="@id/number_of_likes_text_view"
        app:layout_constraintStart_toStartOf="@id/number_of_likes_text_view"
        app:tint="@color/white"
        tools:ignore="ContentDescription"
        tools:layout_editor_absoluteX="196dp"
        tools:layout_editor_absoluteY="41dp" />

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:ellipsize="end"
        android:fontFamily="@font/cabin_medium"
        android:maxLines="1"
        android:textColor="@color/titleTextColor"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_image_view"
        tools:text="@string/lorem_ipsum_average" />

    <ImageView
        android:id="@+id/vegetarian_image_view"
        style="@style/WidgetOverlay.FoodApp.ImageView.FragmentOverview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@id/title_text_view"
        app:layout_constraintTop_toBottomOf="@id/title_text_view"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/vegetarian_text_view"
        style="@style/WidgetOverlay.FoodApp.TextView.FragmentOverview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scr_overview_text_view_vegetarian"
        app:layout_constraintBottom_toBottomOf="@id/vegetarian_image_view"
        app:layout_constraintStart_toEndOf="@id/vegetarian_image_view"
        app:layout_constraintTop_toTopOf="@id/vegetarian_image_view" />

    <ImageView
        android:id="@+id/vegan_image_view"
        style="@style/WidgetOverlay.FoodApp.ImageView.FragmentOverview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@id/vegetarian_image_view"
        app:layout_constraintTop_toBottomOf="@id/vegetarian_text_view"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/vegan_text_view"
        style="@style/WidgetOverlay.FoodApp.TextView.FragmentOverview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scr_overview_text_view_vegan"
        app:layout_constraintBottom_toBottomOf="@+id/vegan_image_view"
        app:layout_constraintStart_toEndOf="@+id/vegan_image_view"
        app:layout_constraintTop_toTopOf="@+id/vegan_image_view" />

    <ImageView
        android:id="@+id/gluten_free_image_view"
        style="@style/WidgetOverlay.FoodApp.ImageView.FragmentOverview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/vegetarian_text_view"
        app:layout_constraintStart_toEndOf="@+id/vegetarian_text_view"
        app:layout_constraintTop_toTopOf="@+id/vegetarian_text_view"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/gluten_free_text_view"
        style="@style/WidgetOverlay.FoodApp.TextView.FragmentOverview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scr_overview_text_view_gluten_free"
        app:layout_constraintBottom_toBottomOf="@+id/gluten_free_image_view"
        app:layout_constraintStart_toEndOf="@+id/gluten_free_image_view"
        app:layout_constraintTop_toTopOf="@id/gluten_free_image_view" />

    <ImageView
        android:id="@+id/dairy_free_image_view"
        style="@style/WidgetOverlay.FoodApp.ImageView.FragmentOverview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"

        app:layout_constraintStart_toStartOf="@+id/gluten_free_image_view"
        app:layout_constraintTop_toBottomOf="@+id/gluten_free_image_view"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dairy_free_text_view"
        style="@style/WidgetOverlay.FoodApp.TextView.FragmentOverview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scr_overview_text_view_dairy_free"
        app:layout_constraintBottom_toBottomOf="@+id/dairy_free_image_view"
        app:layout_constraintStart_toEndOf="@+id/dairy_free_image_view"
        app:layout_constraintTop_toTopOf="@+id/dairy_free_image_view" />

    <ImageView
        android:id="@+id/healthy_image_view"
        style="@style/WidgetOverlay.FoodApp.ImageView.FragmentOverview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/gluten_free_text_view"
        app:layout_constraintStart_toEndOf="@+id/gluten_free_text_view"
        app:layout_constraintTop_toTopOf="@+id/gluten_free_text_view"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/healthy_text_view"
        style="@style/WidgetOverlay.FoodApp.TextView.FragmentOverview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scr_overview_text_view_healthy"
        app:layout_constraintBottom_toBottomOf="@+id/healthy_image_view"
        app:layout_constraintStart_toEndOf="@+id/healthy_image_view"
        app:layout_constraintTop_toTopOf="@+id/healthy_image_view" />

    <ImageView
        android:id="@+id/cheap_image_view"
        style="@style/WidgetOverlay.FoodApp.ImageView.FragmentOverview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@id/healthy_image_view"
        app:layout_constraintTop_toBottomOf="@id/healthy_image_view"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/cheap_text_view"
        style="@style/WidgetOverlay.FoodApp.TextView.FragmentOverview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scr_overview_text_view_cheap"
        app:layout_constraintBottom_toBottomOf="@+id/cheap_image_view"
        app:layout_constraintStart_toEndOf="@+id/cheap_image_view"
        app:layout_constraintTop_toTopOf="@+id/cheap_image_view" />

    <ScrollView
        android:id="@+id/overview_scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clipToPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dairy_free_text_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/overview_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"

                tools:text="@string/lorem_ipsum_lengthy" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.motion.widget.MotionLayout>